<resources>
    <string name="app_name">Trivia</string>
    <string name="what_is_your_name"> What is your name ?</string>
    <string name="who_is_the_best_cricketer_in_the_world">Who is the best cricketer in the world?</string>
    <string name="options">Options</string>
    <string name="sachin_tendulkar">Sachin Tendulkar</string>
    <string name="virat_kholi"> Virat Kholi</string>
    <string name="adam_gilchirst">Adam Gilchirst</string>
    <string name="jacques_kallis">Jacques Kallis</string>
    <string name="colors_of_indian_flag">What are the colors in the Indian national flag?</string>
    <string name="white">White</string>
    <string name="yellow">Yellow</string>
    <string name="orange">Orange</string>
    <string name="green">Green</string>

    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="history">History</string>



</resources>