<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/colors_of_indian_flag"
        android:textSize="@dimen/text_14"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="@dimen/margin_24"
        android:layout_marginTop="@dimen/margin_24"
        android:layout_marginLeft="@dimen/margin_24" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/white"
            android:textColor="@android:color/black"
            android:id="@+id/cbWhite"
            android:layout_weight="0.5"
            android:checked="true"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/margin_24"
            android:layout_marginEnd="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_24"
            android:layout_marginBottom="@dimen/margin_26"
            app:layout_constraintTop_toBottomOf="@+id/tvName"
            />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/yellow"
            android:textColor="@android:color/black"
            android:id="@+id/cbYellow"
            android:layout_weight="0.5"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/margin_24"
            android:layout_marginEnd="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_24"
            android:layout_marginBottom="@dimen/margin_26"
            app:layout_constraintTop_toBottomOf="@+id/cbWhite"
            />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/orange"
            android:textColor="@android:color/black"
            android:id="@+id/cbOrange"
            android:layout_weight="0.5"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/margin_24"
            android:layout_marginEnd="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_24"
            android:layout_marginBottom="@dimen/margin_26"
            app:layout_constraintTop_toBottomOf="@+id/cbYellow"
            />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/green"
            android:textColor="@android:color/black"
            android:id="@+id/cbGreen"
            android:layout_weight="0.5"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/margin_24"
            android:layout_marginEnd="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_24"
            android:layout_marginBottom="@dimen/margin_26"
            app:layout_constraintTop_toBottomOf="@+id/cbOrange"
            />

    <Button
        android:id="@+id/btNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="@dimen/margin_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/next"
        />

</androidx.constraintlayout.widget.ConstraintLayout>